# fondat-redis

./: .pre-commit-config.yaml  .travis.yml  AUTHORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
fondat/: redis.py
roax/: redis.py
tests/: test_redis.py
