[tool.black]
line-length = 88
target-version = ['py38']

[tool.poetry]
name = "fondat-redis"
version = "3.0a1"
description = "Fondat module for Redis."
readme = "README.md"
authors = ["fondat-redis authors"]
homepage = "https://github.com/fondat/fondat-redis/"
documentation = "https://github.com/fondat/fondat-redis/wiki"
license = "MIT"
keywords = ["asgi", "framework", "resource", "openapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
    { include = "fondat" }
]

[tool.poetry.dependencies]
python = "^3.9"
fondat-core = "^3.0a15"
aioredis = "^1.3"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
pre-commit = "^1.18"
pytest = "^5.1"
pytest-asyncio = "^0.14"
pytest-cov = "^2.7"
